--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,22 +3,30 @@ name: Deploy to Amazon S3
 on:
   push:
     branches:
-      - main  # or your default branch name
+      - main  # Ensure this matches your default branch name
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
+    # Use the latest version of the checkout action
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2  # As of my last update in January 2022, v2 is the latest. You might want to check if there's a newer version.
 
+    # Optionally, set up Node.js 16 if any of your actions require it (this is optional and based on the warning you received, but might not be necessary for your specific actions)
+    - name: Use Node.js 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    # Deploy to S3 using the action you've specified
     - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
+      uses: jakejarvis/s3-sync-action@master  # Consider pinning this to a specific version instead of using @master for stability.
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
         AWS_S3_BUCKET: business-experts-magazine
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'us-east-1'  # or your chosen region
+        AWS_REGION: 'us-east-1'  # Ensure this matches your desired AWS region
